# file-dataset

./: .pre-commit-config.yaml  CLAUDE.md  README.md  feature_plan.md  pyproject.toml  tasks.md
src/file_dataset/: __init__.py  _core_file.py  _reader.py  _writer.py  core.py  exceptions.py  file_dataframe.py  options.py  pipeline.py  s3_options.py  s3_utils.py  scripts.py
src/file_dataset/ray/: __init__.py  _datasource.py
tests/: __init__.py  test_blob_table.py  test_core_file.py  test_dataframe_reader.py  test_file_dataframe.py  test_file_dataset.py  test_options.py  test_options_defaults.py  test_parallel_options.py  test_pipeline.py  test_ray_datasource.py  test_ray_integration.py  test_reader.py  test_reader_s3.py  test_s3_utils.py  test_s3transfer_config.py  test_size_table.py  test_write_dataframe.py  test_write_files.py  test_write_s3.py
tests/data/: test_config.json  test_image.txt  test_mask.txt
